colorizer about works now :)

--- a/acoc/acoc.conf
+++ b/acoc/acoc.conf
@@ -13,6 +13,7 @@
 /^(@@.*|diff.*|[\d,acd]+)/		blue
 
 [ping/ap]
+@rtt min/avg/max/mdev = (\d+\.\d+)/(\d+\.\d+)/(\d+\.\d+)/(\d+\.\d+ ms)@	  bold
 # hostname and IP address
 /from (\S+) \(((?:\d?\d?\d\.){3}\d?\d?\d)/ bold
 # < 100 ms RTT
@@ -23,7 +24,6 @@
 /[^.]([2-9]\d\d\d? ms)/			red
 # end report
 /(\d+) packets transmitted, (\d+) received, (\d+%) packet loss, time (\d+ms)/ bold
-@rtt min/avg/max/mdev = (\d+\.\d+)/(\d+\.\d+)/(\d+\.\d+)/(\d+\.\d+ ms)@	  bold
 
 [traceroute/a]
 # < 100 ms RTT
@@ -90,11 +90,11 @@
 
 [top/a]
 # load average < 0.70
-/0\.[0-6]\d(?!\s+\w)/g			green+bold
+/\b0\.[0-6]\d(?!\s+\w)/g			green+bold
 # load average 0.99 < load < 0.70
-/0\.[7-9]\d(?!\s+\w)/g			yellow+bold
+/\b0\.[7-9]\d(?!\s+\w)/g			yellow+bold
 # load average > 1.00
-/[^0]\.\d\d(?!\s+\w)/g			red+bold
+/\d+\.\d\d(?!\s+\w)/g			red+bold
 # process information
 /^(\d+) processes\D+(\d+)\D+(\d+)\D+(\d+)\D+(\d)/ cyan+bold
 # header percentages, except for idle
