--- a/acoc/acoc.conf
+++ b/acoc/acoc.conf
@@ -222,5 +222,18 @@
 [lsmod]
 /^(\w+)\s+(\d+)\s+(\d+)/			green,magenta,bold 
 
+[svn stat,svn up,svn add,svn rm,svn remove,svn move,svn del]
+/^(C\s+.*)/	red+blink
+/^(M\s+.*)/	yellow
+/^(A\s+.*)/	green
+/^(R\s+.*)/	cyan
+/^(D\s+.*)/     red
+/^(\?\s+.*)/    magenta
+/^(I\s+.*)/     white
+/^(!\s+.*)/	bold
+/^(~\s+.*)/	red
+/^( M\s+.*)/    yellow
+/^( C\s+.*)/    red
+
 [whereis]
 /^(.+): (.+)/					yellow,bold
