some more svn colorings, support for red background (what else could you need ;)

--- a/acoc/acoc.conf
+++ b/acoc/acoc.conf
@@ -222,7 +222,15 @@
 [lsmod]
 /^(\w+)\s+(\d+)\s+(\d+)/			green,magenta,bold 
 
-[svn stat,svn up,svn add,svn rm,svn remove,svn move,svn del]
+[svn diff]
+/^(\+\+\+)(.*)/                        green,blue
+/^(---)(.*)/                           red,blue
+/^([+>*])(.*)/                         yellow,green
+/^([-<])(.*)/                          yellow,red
+/^(@@.*|diff.*|[\d,acd]+)/             blue
+/^(Index.*)/			       white
+
+[svn stat,svn up,svn add,svn rm,svn remove,svn move,svn del,svn mv]
 /^(C\s+.*)/	red+blink
 /^(M\s+.*)/	yellow
 /^(A\s+.*)/	green
@@ -234,6 +242,11 @@
 /^(~\s+.*)/	red
 /^( M\s+.*)/    yellow
 /^( C\s+.*)/    red
+/^(svn: E\d+.*)/  yellow+on_red
+/^At revision (\d+)/ blue
+
+[svn blame,svn anno]
+/^\s+(\d+)\s+(\S+)\s+.*/ white,yellow
 
 [whereis]
 /^(.+): (.+)/					yellow,bold
